--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URL="mongodb://localhost:27017/chat"
+MONGO_URL="mongodb+srv://Hunter:Xx92VJi4ZzAKJtEN@cluster0.maqpi.mongodb.net/?retryWrites=true&w=majority"
